--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,16 +1,15 @@
+@import './common.scss';
+
 html,
 body {
     height: 100%;
     width: 100%;
     display: flex;
+    line-height: 1rem;
 }
 
 #root {
     display: flex;
     width: 100%;
     flex-direction: column;
-}
-
-.flex {
-    display: flex;
 }
