--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,3 +13,18 @@ body {
     width: 100%;
     flex-direction: column;
 }
+
+ul,
+ol {
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+
+menu,
+dialog,
+p {
+    padding: 0;
+    margin: 0;
+    border: none;
+}
