We added dynamics INCL context menu, dialog, and overlay

--- a/client/src/common.scss
+++ b/client/src/common.scss
@@ -35,6 +35,14 @@ $vertical-align: ('middle');
     }
 }
 
+.none {
+    display: none;
+}
+
+.block {
+    display: block;
+}
+
 @each $p in $sides {
     @if $p != '' {
         .arrow-#{$p} {
