--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,37 +1,109 @@
 @import './common.scss';
 
-html,
-body {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    line-height: 1rem;
-    overflow: hidden;
+// FROM HERE to common.scss
+@mixin fixsize {
+    flex: none;
 }
+
+@mixin flex-justify($v) {
+    justify-content: $v;
+}
+
+@mixin flex-align($v) {
+    align-items: $v;
+}
+
+$color: (
+    'light': #dfe996,
+    'base': #bfd22d,
+    'dark': #606916,
+);
+
+$border-radius: 8px;
+$border-width: 2px;
+
+$border: (
+    'normal': $border-width solid
+        map-get(
+            $map: $color,
+            $key: 'dark',
+        ),
+    'none': none,
+);
+// TO HERE
 
 #root {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-}
+    & > header {
+        $header-height: 48px;
 
-ul,
-ol {
-    padding: 0;
-    list-style: none;
-    margin: 0;
-}
+        display: flex;
+        @include fixsize();
+        @include flex-justify(space-between);
+        @include flex-align(center);
+        border-bottom: map-get($map: $border, $key: 'normal');
+        height: $header-height;
+        padding: 8px;
+        background-color: map-get($map: $color, $key: 'base');
 
-menu,
-dialog,
-p {
-    padding: 0;
-    margin: 0;
-    border: none;
-}
+        & > div {
+            display: flex;
+            @include fixsize();
+            @include flex-align(center);
+            padding: 0 8px;
 
-@media (orientation: portrait) {
-    nav {
-        width: 100%;
+            &:first-child {
+                h1,
+                input {
+                    margin: 0;
+                    padding: 0;
+                    height: $header-height;
+                    font-size: $header-height / 1.25;
+                }
+
+                h1 {
+                    cursor: pointer;
+                    line-height: $header-height;
+                }
+
+                input {
+                    font-weight: bold;
+                    line-height: $header-height - $border-width;
+                    background-color: transparent;
+                    width: 100%;
+                    border: none;
+                    border-bottom: map-get($map: $border, $key: 'normal');
+                    background-color: map-get($map: $color, $key: 'light');
+                }
+
+                button {
+                }
+            }
+
+            button {
+                background-color: map-get($map: $color, $key: 'light');
+                padding: 0;
+                margin: 0;
+                margin-left: 8px;
+                height: $header-height;
+                font-size: $header-height / 2;
+                display: inline-block;
+                border: map-get($map: $border, $key: 'normal');
+                border-radius: $border-radius;
+                line-height: $header-height;
+                text-align: center;
+                cursor: pointer;
+                aspect-ratio: 1;
+            }
+
+            &:last-child {
+                button {
+                    & > img {
+                        aspect-ratio: 1;
+                        height: $header-height - ($border-width * 2);
+                        border-radius: $border-radius;
+                    }
+                }
+            }
+        }
     }
 }
